circt-bc260128-000008c7/origin/reproduce.log
<stdin>:17:11: error: 'arc.state' op operand type mismatch: operand #1
    %10 = comb.mux bin %rst, %6, %packet_array : !hw.array<4xstruct<data: i8, id: i4>>
          ^
<stdin>:17:11: note: see current operation: %2 = "arc.state"(%4, %arg1, %0, %1) <{arc = @test_module_arc, latency = 1 : i32, operandSegmentSizes = array<i32: 1, 1, 0, 2, 0>}> : (!seq.clock, i1, i1, i382917464) -> !hw.array<4xstruct<data: i8, id: i4>>
<stdin>:17:11: note: expected type: '!hw.array<4xstruct<data: i8, id: i4>>'
<stdin>:17:11: note:   actual type: 'i382917464'
